--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="https://kit.fontawesome.com/ebe0f478f4.js" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=cursive, Lucida Handwriting">
+    <link rel = "stylesheet" type = "text/css" href = "index.css"z>
 </head>
 
 <body>
