--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 
     
-    <sript>
+    <script>
         let todoListsContainer = document.getElementById("todoListsContainer");
 let userInput = document.getElementById("userInput");
 let savedBtnIcon = document.getElementById("savedBtnIcon")
@@ -187,7 +187,7 @@ function addNewTodo() {
 for (let eachTodo of todoList) {
     createTodoItem(eachTodo)
 }
-    </sript>
+    </script>
 </body>
 
 </html>
